[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
clap = "4.4.6"
async-port-scanner = "0.1.4"
futures = "0.3.25"
async-std = "1.12.0"
simple_crypt = "0.2.3"
libc = "0.2.139"
regex = "1.7.1"
x25519-dalek = "2.0"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"