[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
clap = "4.4.6"
async-port-scanner = "0.1.4"
futures = "0.3.25"
async-std = "1.12.0"
simple_crypt = "0.2.3"
libc = "0.2.139"
regex = "1.7.1"
x25519-dalek = "2.0"
rand = "0.8"
sysinfo = "0.32.0"
xcap = "0.3.2"
once_cell = "1.20.3"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["debugapi","memoryapi"] }
ntapi = "0.4.1"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.*"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging"
]
