[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
# futures = "0.3.25"
tokio = { version = "1.33.0", features = ["full"] }
# hex = "0.4.3"
clap = "4.4.6"
colored = "2.0.0"
serde_json = "1.0.107"
rustyline = "12.0.0"