[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
tokio = { version = "1.33.0", features = ["full"] }
clap = "4.4.6"
rustyline = "12.0.0"
simple_crypt = "0.2.3"
x25519-dalek = "2.0"
rand = "0.8"
