[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
tokio = { version = "1.45.0", features = ["full"] }
clap = "4.5.40"
rustyline = "16.0.0"
simple_crypt = "0.2.3"
x25519-dalek = "2.0.1"
rand = "0.8"
once_cell = "1.21.3"
